--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "PORT=3333 next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/themes": "^2.0.3",
-    "better-sqlite3": "^9.2.2",
     "csv-parse": "^5.5.3",
     "csv-stringify": "^6.4.5",
     "date-fns": "^3.2.0",
-    "knex": "^3.1.0",
     "next": "14.0.4",
     "radix-themes-tw": "^0.1.0",
     "react": "^18",
